--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Generate GitHub App Token
         id: app-token
         uses: actions/create-github-app-token@v2
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         with:
           app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
           private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
