--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,13 +32,24 @@ jobs:
       fail-fast: false
     steps:
 
+      - name: Load secrets from 1Password
+        id: op-load-secret
+        uses: 1password/load-secrets-action@v3
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+        with:
+          export-env: false
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+          GH_APP_ID: op://cicd/actions/gittools_actions/gh_app_id
+          GH_APP_PRIVATE_KEY: op://cicd/actions/gittools_actions/gh_app_private_key.pem
+
       - name: Generate GitHub App Token
         id: app-token
         uses: actions/create-github-app-token@v2
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         with:
-          app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
-          private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
+          app-id: ${{ steps.op-load-secret.outputs.GH_APP_ID }}
+          private-key: ${{ steps.op-load-secret.outputs.GH_APP_PRIVATE_KEY }}
           permission-actions: write
           permission-contents: write
           permission-workflows: write
